# custom-apps

./: MANIFEST.in  README.md  setup.py
realtime_notifications/realtime_notifications/: pyproject.toml
realtime_notifications/realtime_notifications/realtime_notifications/: hooks.py  modules.txt
realtime_notifications/realtime_notifications/realtime_notifications/api/: notifications.py
realtime_notifications/realtime_notifications/realtime_notifications/public/css/: realtime_notifications.css
realtime_notifications/realtime_notifications/realtime_notifications/public/js/: realtime_notifications.js
